Alignment Fix

--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ div#hotelIcon img {
     }
 
     nav {
-        width: 100%;
+        
         flex-direction: column;
         align-items: center;
         justify-content: center;
